--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a {
     background: hsl(216, 50%, 16%);
     padding: 30px;
     border-radius: 15px;
+    box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.8);
 }
 
 .nft {
